fix(user_reviews): review edit form has proper z-index when opened from user review list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -201,6 +201,7 @@ html>body {
     margin-top: 35px;
     margin-left: 15%;
     margin-right: 15%;
+    z-index: 1001;
   }
 
   button.close {
